--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1162,6 +1162,13 @@ footer {
 }
 
 /* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
+/* src - components - update - update success.js*/
 .update-success {
   text-align: center;
   padding: 50px 0px;
