--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1821,11 +1821,23 @@ footer {
   align-items: center;
   flex-direction: column;
   text-align: center;
-  padding-top: 70px;
+  padding-top: 30px;
 }
 
 .new-comment-panel .align p {
-  padding: 20px 0px;
+  padding: 10px 0px;
+}
+
+.new-comment-panel .align .a {
+  padding: 70px 0px;
+}
+
+.new-comment-panel .align input[type="text"] {
+  background-color: transparent;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .new-comment-panel .align input[type="number"] {
@@ -1833,6 +1845,7 @@ footer {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  text-align: center;
 }
 
 .new-comment-panel .align button {
@@ -1915,6 +1928,15 @@ footer {
 }
 
 @media screen and (max-width: 760px) {
+  .new-comment-panel .align {
+    padding-top: 0px;
+  }
+
+  .new-comment-panel .align .a {
+    padding: 30px 0px;
+  }
+  
+
   .home .code-welcome-bonus-a {
     padding: 100px 20px;
   }
