--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1494,6 +1494,17 @@ footer {
 }
 
 /* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
+/* src - components - october - update comment */
 .update-comment {
   align-items: center;
   display: flex;
@@ -1515,7 +1526,7 @@ footer {
 }
 
 .update-comment .a .b p {
-  padding: 10px 0px;
+  padding: 10px;
   font-size: 17px;
 }
 
@@ -1541,6 +1552,127 @@ footer {
   margin: 20px 0px;
   border-radius: 10px;
 }
+
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+/* update point - Calcul Comment */
+.calcul-comment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.calcul-comment .a {
+  padding-top: 20px;
+}
+
+.calcul-comment .a p {
+  padding: 10px 0px;
+}
+
+.calcul-comment .c {
+  font-size: 14px;
+  padding: 10px 20px;
+  color: #444;
+}
+
+.calcul-comment .c .navlink {
+  color: blue
+}
+
+.calcul-comment input[type="number"] {
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-color: transparent;
+  text-align: center;
+}
+
+.calcul-comment button {
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: blue;
+  border: 1px solid blue;
+  font-size: 16px;
+  padding: 10px 20px;
+  margin: 50px 0px;
+  border-radius: 20px;
+}
+
+/* update point - validate comment success */
+/* update point - validate comment success */
+/* update point - validate comment success */
+/* update point - validate comment success */
+/* update point - validate comment success */
+/* update point - validate comment success */
+/* update point - validate comment success */
+/* update point - validate comment success */
+
+.validate-comment-success {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 70px;
+}
+
+.validate-comment-success .title {
+  font-weight: bold;
+  font-size: 19px;
+}
+
+.validate-comment-success button {
+  cursor: pointer;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: blue;
+  border: none;
+  font-size: 15px;
+  padding: 10px 20px;
+  margin: 50px 0px;
+  border-radius: 20px;
+}
+
+
+/* update point - validate comment error */
+/* update point - validate comment error */
+/* update point - validate comment error */
+/* update point - validate comment error */
+/* update point - validate comment error */
+/* update point - validate comment error */
+/* update point - validate comment error */
+.validate-comment-error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 70px;
+}
+
+.validate-comment-error .title {
+  font-weight: bold;
+  font-size: 19px;
+}
+
+.validate-comment-error button {
+  cursor: pointer;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: red;
+  background-color: transparent;
+  border: 1px solid red;
+  font-size: 15px;
+  padding: 10px 20px;
+  margin: 50px 0px;
+  border-radius: 20px;
+}
+
 
 .bonus-title {
   font-family: Source Sans Pro, Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -1770,7 +1902,6 @@ footer {
   color: blue;
   background-color: white;
 }
-
 
 /* admin - navigation - navigation.js */
 /* admin - navigation - navigation.js */
