--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1608,6 +1608,11 @@ footer {
   border-radius: 20px;
 }
 
+.validation-automatic {
+  color: #444;
+  font-size: 14px;
+}
+
 /* update point - validate comment success */
 /* update point - validate comment success */
 /* update point - validate comment success */
