--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -4,6 +4,18 @@
     flex-wrap: wrap;
   }
 
+  ::-webkit-scrollbar {
+    width: 20px
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #cdcdcd
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #cdcdcd;
+  }
+
   .menu-navigation .guide-color-blue-menu {
     color: blue;
   }
