--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -5,15 +5,15 @@
   }
 
   ::-webkit-scrollbar {
-    width: 20px
+    width: 12px
   }
 
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #cdcdcd
+    box-shadow: inset 0 0 5px #eee
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #cdcdcd;
+    background: #eee;
   }
 
   .menu-navigation .guide-color-blue-menu {
